# PLDM daemon options
option(
    'tests',
    type: 'feature',
    value: 'enabled',
    description: 'Build tests'
)

option(
    'oe-sdk',
    type: 'feature',
    description: 'Enable OE SDK'
)

option(
    'utilities',
    type: 'feature',
    value: 'enabled',
    description: 'Enable debug utilities'
)

option(
    'libpldmresponder',
    type: 'feature',
    value: 'enabled',
    description: 'Enable libpldmresponder'
)

option(
    'systemd',
    type: 'feature',
    value: 'enabled',
    description: 'Include systemd support'
)

# As per PLDM spec DSP0240 version 1.1.0, in Timing Specification for PLDM messages (Table 6),
# the instance ID for a given response will expire and become reusable if a response has not been
# received within a maximum of 6 seconds after a request is sent. By setting the dbus timeout
# value to 5 seconds we ensure that PLDM does not wait for a response from a dbus call even after
# the instance ID has expired. If the option is set to 5 seconds, any dbus call originated from
# PLDM daemon will timeout after 5 seconds.
option(
    'dbus-timeout-value',
    type: 'integer',
    min: 3,
    max: 10,
    value: 5,
    description: '''The amount of time pldm waits to get a response for a dbus
                    message before timing out'''
)

option(
    'heartbeat-timeout-seconds',
    type: 'integer',
    value: 120,
    description: '''The amount of time host waits for BMC to respond to pings
                    from host, as part of host-bmc surveillance'''
)

# Flight Recorder for PLDM Daemon
option(
    'flightrecorder-max-entries',
    type:'integer',
    min:0,
    max:30,
    value: 10,
    description: '''The max number of pldm messages that can be stored in the
                    recorder, this feature will be disabled if it is set to 0'''
)

# PLDM Daemon Terminus options
option(
    'terminus-id',
    type:'integer',
    min:0,
    max: 255,
    value:1,
    description: '''The terminus id value of the device that is running this
                    pldm stack'''
)

option(
    'terminus-handle',
    type:'integer',
    min:0,
    max:65535,
    value:1,
    description: '''The terminus handle value of the device that is running this
                    pldm stack'''
)

# Timing specification options for PLDM messages
option(
    'number-of-request-retries',
    type: 'integer',
    min: 2,
    max: 30,
    value: 2,
    description: '''The number of times a requester is obligated to retry a
                    request'''
)

option(
    'instance-id-expiration-interval',
    type: 'integer',
    min: 5,
    max: 6,
    value: 5,
    description: 'Instance ID expiration interval in seconds'
)

# Default response-time-out set to 2 seconds to facilitate a minimum retry of
# the request of 2.
option(
    'response-time-out',
    type: 'integer',
    min: 300,
    max: 4800,
    value: 2000,
    description: '''The amount of time a requester has to wait for a response
                    message in milliseconds'''
)

# Firmware update configuration parameters
option(
    'maximum-transfer-size',
    type: 'integer',
    min: 16,
    max: 4294967295,
    value: 4096,
    description: '''Maximum size in bytes of the variable payload allowed to be
                    requested by the FD, via RequestFirmwareData command'''
)

# PLDM Soft Power off options
option(
    'softoff',
    type: 'feature',
    value: 'enabled',
    description: 'Build soft power off application'
)

option(
    'softoff-timeout-seconds',
    type: 'integer',
    value: 7200,
    description: 'softoff: Time to wait for host to gracefully shutdown'
)

# Vendor Specific Options

## OEM IBM Options
option(
    'oem-ibm',
    type: 'feature',
    value: 'enabled',
    description: 'Enable IBM OEM PLDM'
)

option(
    'oem-ibm-dma-maxsize',
    type: 'integer',
    min:4096,
    max: 16773120,
    value: 8384512,
    description: 'OEM-IBM: max DMA size'
)
option(
    'sleep-between-get-sensor-reading',
    type: 'integer',
    min: 0,
    max: 1000,
    value: 10,
    description: '''The amount of time the sensor polling timer should sleep
                    between the sending GetSensorReading times in
                    milliseconds'''
    )

option(
    'poll-sensor-timer-interval',
    type: 'integer',
    min: 1000,
    max: 100000,
    value: 1000,
    description: '''The interval to restart the timer to poll the PLDm sensors
                    in milliseconds'''
    )

option(
    'normal-ras-event-timer',
    type: 'integer',
    min: 2000,
    max: 10000,
    value: 5000,
    description: '''The amount of time a BMC periodcally poll normal RAS event
                    in milliseconds'''
    )

option(
    'critical-ras-event-timer',
    type: 'integer',
    min: 25,
    max: 100,
    value: 50,
    description: '''The amount of time a BMC periodcally poll critical RAS event
                    in milliseconds'''
    )

option(
    'poll-req-event-timer',
    type: 'integer',
    min: 25,
    max: 100,
    value: 25,
    description: '''The amount of time a BMC send each part in multipart
                    pollForEventMessage in milliseconds'''
    )

option(
    'ampere',
    type: 'feature',
    description: 'Enable AMPERE PLDM'
)

option(
    'cper-log-path',
    type : 'string',
    value : '/var/lib/faultlogs/cper/',
    description : 'File system path containing CPER logs'
)

option('ampere-bert-hostoff-timer', type: 'integer', min: 10000, max: 50000, description: 'The amount of time a BMC need to wait before checking current host state in milliseconds', value: 20000)
option('ampere-bert-hoston-timer', type: 'integer', min: 1000, max: 20000, description: 'The amount of time a BMC need to wait to make sure host send boot event to BMC in milliseconds', value: 5000)
option('ampere-bert-hostfail-timer', type: 'integer', min: 60000, max: 180000, description: 'The amount of time a BMC need to wait to make sure host boot fail in milliseconds', value: 120000)
option('ampere-bert-claim-spi-timer', type: 'integer', min: 100, max: 1000, description: 'The amount of time a BMC can claim the SPI in milliseconds', value: 500)
option('ampere-handshake-spi-script', type : 'string', value : '/usr/sbin/ampere_spi_util.sh', description : 'Script to grant a permission to access SPI-NOR')
option('crashdump-log-path', type : 'string', value : '/var/lib/faultlogs/crashdump/', description : 'File system path containing CrashDump logs')